# bot-service/docs/swagger.json
@@ -12,7 +12,68 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/createUser": {
+        "/ping": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "handler"
+                ],
+                "summary": "Ping",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/activateHabit": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "handler"
+                ],
+                "summary": "Activate user habit",
+                "parameters": [
+                    {
+                        "description": "HabitActivationRequest",
+                        "name": "habitActivation",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.HabitActivationModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/create": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -60,7 +121,7 @@
                 }
             }
         },
-        "/getUser": {
+        "/user/search": {
             "get": {
                 "produces": [
                     "application/json"
@@ -105,28 +166,22 @@
                     }
                 }
             }
-        },
-        "/ping": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "handler"
-                ],
-                "summary": "Ping",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
+        "handler.HabitActivationModel": {
+            "type": "object",
+            "properties": {
+                "active_habit_id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "user_id": {
+                    "type": "string",
+                    "format": "uuid"
+                }
+            }
+        },
         "handler.UserModel": {
             "type": "object",
             "properties": {
